Сборка работает